Closed Bug 721636 Opened 14 years ago Closed 14 years ago

IonMonkey: patching for ICs should invalidate the instruction cache on ARM

Categories

(Core :: JavaScript Engine, defect)

ARM
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mjrosenb, Unassigned)

Details

Attachments

(1 file)

Last week I landed IC's on ARM, and shortly thereafter, I realized that there is nothing in place to flush the cache when we overwrite instructions.
Attachment #592055 - Flags: review?(Jacob.Bramley)
Attachment #592055 - Flags: review?(Jacob.Bramley) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: