Adding in a simple cache flush. (Bug 721636, r=jbramley)