js/src/assembler/jit/ExecutableAllocator.h
@@ -475,3 +475,4 @@ private:
 #endif // ENABLE(ASSEMBLER)
 
 #endif // !defined(ExecutableAllocator)
+
